--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -21,7 +21,9 @@
                 android:scrollbars="vertical"
                 android:fadeScrollbars="false"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" >
+
+                </android.support.v7.widget.RecyclerView>
 
         </android.support.v7.widget.CardView>
 
